# Gomoku

./: .gitignore  CMakeLists.txt  README.md  compile.py
Src/: Main.cpp
Src/Brain/: Brain.cpp  Brain.hpp
Src/Core/: Core.cpp  Core.hpp
Src/Errors/: Errors.cpp  Errors.hpp
Src/Pattern/: Pattern.cpp  Pattern.hpp
Src/Reader/: Reader.cpp  Reader.hpp
Src/Threat/: Threat.hpp
Src/Utils/: Utils.cpp  Utils.hpp
